# tomorrowscities

./: .env.global  .gitattributes  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  Procfile  README.md  README_MIGRATION.md  compose.yaml  package.json  pyproject.toml  requirements.txt
api/: main.py
docs/: conf.py  gui.rst  index.rst  install.rst  make.bat  quickstart.rst
docs/source/: conf.py  index.rst
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: ExecutePanel.tsx  FileDropZone.tsx  (+5 more)
src/: app.py  requirements.txt
src/gui/: Dockerfile  app_engine.py  app_engine_v2.py  engine.py  requirements.txt  sandbox.py
src/tests/: Input_DistributionTables_20230614.xlsx  nairobi_business_buildings.geojson  nairobi_business_household.json  nairobi_business_individual.json  nairobi_business_landuse.geojson  nairobi_earthquake_fragility.json  nairobi_earthquake_intensity.geojson  nairobi_flood_depth_50yr.geojson  nairobi_flood_vulnerability.json  nairobi_power_edges.geojson  nairobi_power_fragility.json  nairobi_power_nodes.geojson
src/tomorrowcities/: __init__.py  core.py  utils.py
tomorrowcities/: __init__.py  data.py
tomorrowcities/assets/: custom.css  theme.js
tomorrowcities/backend/: engine.py  utils.py
tomorrowcities/components/: article.py  file_drop.py  file_drop.vue
tomorrowcities/pages/: __init__.py  account.py  docs.py  engine.py  explore.py  file_list_widget.vue  policies.py  policies.py.deactivated4now  settings.py  utilities.py
tomorrowcities/public/: index.html
(+20 files in other folders)
